ID-370 updating schema, DTOs#minor
